Fixed some css that was causing things to be misaligned.

--- a/src/Components/Header/styles.module.scss
+++ b/src/Components/Header/styles.module.scss
@@ -9,7 +9,6 @@
 .header {
     overflow: hidden;
     background-color: transparent;
-    padding: 20px 10px;
     width: 100%;
   }
   
