--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -69,7 +69,6 @@ body {
 }
 
 .centered {
-  margin: 50px 50px 50px 50px;
   height: 62%;
   width: 90%;
   position: absolute;
